--- a/ShoppingCart/src/main/resources/templates/admin/add-product.html
+++ b/ShoppingCart/src/main/resources/templates/admin/add-product.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymleaf.org"
-	th:replace="base::Layout(~{::section})">
+	th:replace="~{base::Layout(~{::section})}">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
@@ -11,25 +11,34 @@
 			<div class="row">
 				<div class="col-md-6 offset-md-3">
 					<div class="card card-sh">
-						<div class="card-header text-center fs-4">Add Product</div>
+						<div class="card-header text-center ">
+							<p class="fs-4">Add Product</p>
+							<th:blockth:if{$session.successMsg}>
+								<p class="text-success fw-bold">[[${session.successMsg}]]</p>
+							</th:block>
+							<th:blockth:if{$session.errorMsg}>
+								<p class="text-danger fw-bold">[[${session.errorMsg}]]</p>
+							</th:block>
+							<th:block th:text="${@commonServiceImpl.removeSystemMessage()}"></th:block>
+						</div>
 						<div class="card-body">
-							<form>
+							<form action="/admin/saveProduct" method="post" enctype="multipart/form-data">
 								<div class="mb-3">
 									<label>Enter Title</label> <input type="text" name="title"
 										class="form-control">
 								</div>
 								<div class="mb-3">
 									<label>Description</label>
-									<textarea rows="3" cols="" class="form-control"></textarea>
+									<textarea rows="3" cols="" class="form-control" name="description"></textarea>
 								</div>
 								<div class="mb-3">
-									<label>Select Category</label> <select class="form-control">
+									<label>Select Category</label> <select class="form-control" name="category">
 										<option>--select--</option>
 										<option th:each="c:${categories}">[[${c.name}]]</option>
 									</select>
 								</div>
 								<div class="mb-3">
-									<label>Enter Price</label> <input type="text" name="price"
+									<label>Enter Price</label> <input type="number" name="price"
 										class="form-control">
 								</div>
 								<div class="row">
@@ -38,7 +47,7 @@
 											class="form-control">
 									</div>
 									<div class="mb-3 col">
-										<label>Upload Image</label> <input type="file" name="image"
+										<label>Upload Image</label> <input type="file" name="file"
 											class="form-control">
 									</div>
 								</div>
