--- a/ShoppingCart/src/main/resources/templates/index.html
+++ b/ShoppingCart/src/main/resources/templates/index.html
@@ -108,41 +108,34 @@
 				<div class="row">
 						<p class="text-center fs-4">Latest Product</p>
 
-						<div class="col-md-3">
-								<div class="card shadow p-3 mb-5 bg-body-tertiary rounded" >
-										<div class="card-body text-center">
-											<img src="img/product_img/laptop.jpg" width="65%" height="140px">
-											<p class="text-center">HP Laptop</p>
-										</div>
-								</div>
-						</div>
+							<div class="row">
 
-						<div class="col-md-3">
-								<div class="card shadow p-3 mb-5 bg-body-tertiary rounded" >
-										<div class="card-body text-center">
-											<img src="img/product_img/laptop.jpg" width="65%" height="140px">
-											<p class="text-center">HP Laptop</p>
+								<th:block th:if="${products.size >0}">
+									<div class="col-md-3" th:each="p:${products}">
+										<div class="card">
+											<div class="card-body ">
+												<img alt="" th:src="@{'/img/product_img/'+${p.image}}"
+													width="100%" height="150px">
+												<p class="fs-5 text-center">[[${p.title}]]</p>
+												<div class="row text-center">
+													<p class="fs-6 fw-bold ">
+														<span>&#8377; [[${p.discountedPrice}]]</span> <br> <span
+															class="text-decoration-line-through text-secondary">&#8377;
+															[[${p.price}]]</span> <span class="fs-6 text-success">[[${p.discount}]]%
+															off </span>
+													</p>
+													<a th:href="@{'/product/'+${p.id}}"
+														class="btn btn-primary col-md-6 offset-md-3">View
+														Details</a>
+												</div>
+											</div>
 										</div>
-								</div>
-						</div>
-
-						<div class="col-md-3">
-								<div class="card shadow p-3 mb-5 bg-body-tertiary rounded" >
-										<div class="card-body text-center">
-											<img src="img/product_img/laptop.jpg" width="65%" height="140px">
-											<p class="text-center">HP Laptop</p>
-										</div>
-								</div>
-						</div>
-
-						<div class="col-md-3">
-								<div class="card shadow p-3 mb-5 bg-body-tertiary rounded" >
-										<div class="card-body text-center">
-											<img src="img/product_img/laptop.jpg" width="65%" height="140px">
-											<p class="text-center">HP Laptop</p>
-										</div>
-								</div>
-						</div>
+									</div>
+								</th:block>
+								<th:block th:unless="${products.size>0}">
+								<p class="fs-4 text-center mt-4 text-danger">Product not available</p>
+								</th:block>
+							</div>
 
 				</div>
 		</div>
