--- a/ShoppingCart/src/main/resources/templates/register.html
+++ b/ShoppingCart/src/main/resources/templates/register.html
@@ -7,86 +7,96 @@
 </head>
 <body>
 <section>
-		<div class="container mt-5 p-5"><!--margin top - 5, padding - 5  -->
-		<div class="row">
-				<div class="col-md-5 mt-5 p-3">
-						<img alt="" src="img/ecom.png" width="100%" height="400px">
+		<div class="container mt-5 p-5">
+			<div class="row">
+				<div class="col-md-5 p-5">
+					<img alt="" src="img/ecom.png" width="100%" height="400px">
 				</div>
-				<div class="col-md-7 p-1">
-						<div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-								<div class="card-header">
-										<p class="fs-4 text-center">Register</p>
-								</div>
-								<div class="card-body">
-										<form>
-										
-												<div class="row">
-														<div class="col">
-																<label class="form-lable">Full Name</label>
-																<input class="form-control" name="name" type="text">
-														</div>
-														<div class="col">
-																<label class="form-lable">Mobile Number</label>
-																<input class="form-control" name="mobilenumber" type="number">
-														</div>
-												</div>
-												
-												<div class="mb-3">
-														<label class="form-lable">Email</label>
-														<input class="form-control" name="email" type="email">
-												</div>
-												
-												<div class="row">
-														<div class="col">
-																<label class="form-lable">Address</label>
-																<input class="form-control" name="address" type="text">
-														</div>
-														<div class="col">
-																<label class="form-lable">City</label>
-																<input class="form-control" name="city" type="text">
-														</div>
-												</div>
-												
-												<div class="row">
-														<div class="col">
-																<label class="form-lable">State</label>
-																<input class="form-control" name="state" type="text">
-														</div>
-														<div class="col">
-																<label class="form-lable">Pin Code</label>
-																<input class="form-control" name="pincode" type="number">
-														</div>
-												</div>
-												
-												<div class="row">
-														<div class="col">
-																<label class="form-lable">Password</label>
-																<input class="form-control" name="password" type="password">
-														</div>
-														<div class="col">
-																<label class="form-lable">Confirm Password</label>
-																<input class="form-control" name="cpassword" type="password">
-														</div>
-												</div>
-
-													<div class="mb-3">
-															<label class="form-lable">Profile Image</label>
-															<input class="form-control" name="profileimage" type="file">
-													</div>
-
-
-												<button type="submit" class="btn bg-primary text-white col-md-12">Register</button>
-										</form>
-								</div>
-								<div class="card-footer text-center">
-										<a href="#" class="text-decoration-none">Forgot Password</a><br>
-										Already have an account?
-										<a href="/login" class="text-decoration-none">Login</a>
-								</div>
+				<div class="col-md-7 p-2">
+					<div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
+						<div class="card-header text-center">
+							<p class="fs-4">Register</p>
+							<th:block th:i="${session.successMsg}">
+								<p class="text-success fw-bold">[[${session.successMsg}]]</p>
+							</th:block>
+							<th:block th:if="${session.errorMsg}">
+								<p class="text-danger fw-bold">[[${session.errorMsg}]]</p>
+							</th:block>
+							<th:block th:text="${@commonServiceImpl.removeSystemMessage()}"></th:block>
 						</div>
+						<div class="card-body">
+							<form action="/saveUser" enctype="multipart/form-data"
+								method="post">
+								<div class="row">
+									<div class="col">
+										<label class="form-label">Full Name</label> <input required
+											class="form-control" name="fullName" type="text">
+									</div>
+									<div class="col">
+										<label class="form-label">Mobile Number</label> <input
+											required class="form-control" name="mobileNumber"
+											type="number">
+									</div>
+								</div>
+
+								<div class="mb-3">
+									<label class="form-label">Email</label> <input required
+										class="form-control" name="email" type="email">
+								</div>
+
+								<div class="row">
+									<div class="col">
+										<label class="form-label">Address</label> <input required
+											class="form-control" name="address" type="text">
+									</div>
+									<div class="col">
+										<label class="form-label">City</label> <input required
+											class="form-control" name="city" type="text">
+									</div>
+								</div>
+
+								<div class="row">
+									<div class="col">
+										<label class="form-label">State</label> <input required
+											class="form-control" name="state" type="text">
+									</div>
+									<div class="col">
+										<label class="form-label">Pincode</label> <input required
+											class="form-control" name="pinCode" type="number">
+									</div>
+								</div>
+
+								<div class="row">
+									<div class="col">
+										<label class="form-label">Password</label> <input required
+											class="form-control" name="password" type="password">
+									</div>
+									<div class="col">
+										<label class="form-label">Confirm Password</label> <input
+											required class="form-control" name="cpassword"
+											type="password">
+									</div>
+								</div>
+
+								<div class="mb-3">
+									<label class="form-label">Profile Image</label> <input
+										class="form-control" name="img" type="file">
+								</div>
+
+								<button type="submit"
+									class="btn bg-primary text-white col-md-12">Register</button>
+							</form>
+						</div>
+
+						<div class="card-footer text-center">
+
+							have an account ? <a href="/login" class="text-decoration-none">Login
+							</a>
+						</div>
+					</div>
 				</div>
+			</div>
 		</div>
-		</div> 
 </section>
 <h1>Registration Page</h1>
 </body>
