--- a/ShoppingCart/src/main/resources/templates/base.html
+++ b/ShoppingCart/src/main/resources/templates/base.html
@@ -3,7 +3,7 @@
 		th:fragment="Layout(content)">
 <head>
 <meta charset="UTF-8">
-<title>Base</title>
+<title>Shopping Cart</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
 		rel="stylesheet"
@@ -48,7 +48,7 @@
 		      </ul>
 		      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 			        <li class="nav-item">
-				          <a class="nav-link active" aria-current="page" href="/login"><i class="fa-solid fa-right-to-bracket"></i>  LOGIN</a>
+				          <a class="nav-link active" aria-current="page" href="/signin"><i class="fa-solid fa-right-to-bracket"></i>  LOGIN</a>
 			        </li>
 			        <li class="nav-item">
 				          <a class="nav-link active" aria-current="page" href="/register">REGISTER</a>
