--- a/ShoppingCart/src/main/resources/templates/login.html
+++ b/ShoppingCart/src/main/resources/templates/login.html
@@ -13,15 +13,23 @@
 						<img alt="" src="img/ecom.png" width="100%" height="400px">
 				</div>
 				<div class="col-md-6 mt-3 p-5">
-						<div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-								<div class="card-header">
-										<p class="fs-4 text-center">Login</p>
-								</div>
+					<div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
+						<div class="card-header">
+							<p class="fs-4 text-center">Login</p>
+							<div th:if="${param.error}"
+								class="alert alert-danger text-center">
+								<th:block
+									th:if="${session.SPRING_SECURITY_LAST_EXCEPTION!=null}">
+									[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]
+								</th:block>
+							</div>
+						<div th:if="${param.logout}" class="alert alert-success">Logout Sucessfully</div>
+						</div>
 								<div class="card-body">
-										<form>
+										<form action="/login" method="post">
 												<div class="mb-3">
 														<label class="form-lable">Email</label>
-														<input class="form-control" name="email" type="email">
+														<input class="form-control" name="username" type="email">
 												</div>
 												<div class="mb-3">
 														<label class="form-lable">Password</label>
