--- a/ShoppingCart/src/main/resources/templates/admin/category.html
+++ b/ShoppingCart/src/main/resources/templates/admin/category.html
@@ -13,13 +13,13 @@
 					<div class="card card-sh">
 						<div class="card-header text-center">
 							<p class="fs-4">Add Category</p>
-							<th:blockth:if{$session.successMsg}>
-								<p class="text-success fw-bold">[[${session.successMsg}]]</p>
+							<th:block th:i="${session.succMsg}">
+								<p class="text-success fw-bold">[[${session.succMsg}]]</p>
 							</th:block>
-							<th:blockth:if{$session.errorMsg}>
+							<th:block th:if="${session.errorMsg}">
 								<p class="text-danger fw-bold">[[${session.errorMsg}]]</p>
 							</th:block>
-							<th:block th:text="${@commonServiceImpl.removeSystemMessage()}"></th:block>
+							<th:block th:text="${@commonServiceImpl.removeSessionMessage()}"></th:block>
 						</div>
 
 						<div class="card-body">
@@ -70,7 +70,7 @@
 									</tr>
 								</thead>
 								<tbody>
-									<tr th:each="cat, c:${categories}">
+									<tr th:each="cat, c:${categorys}">
 										<th scope="row">[[${c.count}]]</th>
 										<td>[[${cat.name}]]</td>
 										<td>[[${cat.isActive}]]</td>
