--- a/ShoppingCart/src/main/resources/templates/admin/users.html
+++ b/ShoppingCart/src/main/resources/templates/admin/users.html
@@ -6,12 +6,12 @@
 <title>Insert title here</title>
 </head>
 <body>
-<section>
-		<div class="container mt-5 p-5">
+	<section>
+		<div class="container-fluid mt-5 p-5">
 
 			<div class="card card-sh">
 				<div class="card-header text-center">
-					<p class="fs-4">View Products</p>
+					<p class="fs-4">Users</p>
 							<th:block th:i="${session.succMsg}">
 								<p class="text-success fw-bold">[[${session.succMsg}]]</p>
 							</th:block>
@@ -25,34 +25,32 @@
 						<thead>
 							<tr>
 								<th scope="col">Sl No</th>
-								<th scope="col">Image</th>
-								<th scope="col">Title</th>
-								<th scope="col">Category</th>
-								<th scope="col">Price</th>
-								<th scope="col">Discount</th>
-								<th scope="col">Discount Price</th>
-								<th scope="col">Stock</th>
+								<th scope="col">Profile</th>
+								<th scope="col">Name</th>
+								<th scope="col">Email</th>
+								<th scope="col">Mobile No</th>
+								<th scope="col">Address</th>
+								<th scope="col">Status</th>
 								<th scope="col">Action</th>
 							</tr>
 						</thead>
 						<tbody>
-							<tr th:each="p,c:${products}">
+							<tr th:each="u,c:${users}">
 								<th scope="row">[[${c.count}]]</th>
-								<td><img th:src="@{'/img/product_img/'+${p.image}}"
+								<td><img th:src="@{'/img/profile_img/'+${u.profileImage}}"
 									width="70px" height="70px"></td>
-								<td>[[${p.title}]]</td>
-								<td>[[${p.category}]]</td>
-								<td>[[${p.price}]]</td>
-								<td>[[${p.discount}]]</td>
-								<td>[[${p.discountPrice}]]</td>
-								<td>[[${p.stock}]]</td>
-								<td><a th:href="@{'/admin/editProduct/'+${p.id}}" class="btn btn-sm btn-primary"><i
-										class="fa-solid fa-pen-to-square"></i>Edit</a>
+								<td>[[${u.name}]]</td>
+								<td>[[${u.email}]]</td>
+								<td>[[${u.mobileNumber}]]</td>
+								<td>[[${u.address+','+u.city+','+u.state+','+u.pincode}]]</td>
+								<td>[[${u.isEnable}]]</td>
+								<td><a th:href="@{'/admin/updateSts?status=true&id='+${u.id}}"
+									class="btn btn-sm btn-primary">Active</a> 
 										
-										 <a
-									th:href="@{'/admin/deleteProduct/'+${p.id}}"
-									class="btn btn-sm btn-danger"><i class="fa-solid fa-trash"></i>
-										Delete</a></td>
+									<a
+									th:href="@{'/admin/updateSts?status=false&id='+${u.id}}"
+									class="btn btn-sm btn-danger">
+										Inactive</a></td>
 							</tr>
 
 						</tbody>
@@ -60,6 +58,7 @@
 				</div>
 			</div>
 		</div>
-</section>
+
+	</section>
 </body>
 </html>
