--- a/ShoppingCart/src/main/resources/templates/index.html
+++ b/ShoppingCart/src/main/resources/templates/index.html
@@ -119,7 +119,7 @@
 												<p class="fs-5 text-center">[[${p.title}]]</p>
 												<div class="row text-center">
 													<p class="fs-6 fw-bold ">
-														<span>&#8377; [[${p.discountedPrice}]]</span> <br> <span
+														<span>&#8377; [[${p.discountPrice}]]</span> <br> <span
 															class="text-decoration-line-through text-secondary">&#8377;
 															[[${p.price}]]</span> <span class="fs-6 text-success">[[${p.discount}]]%
 															off </span>
