--- a/ShoppingCart/src/main/resources/templates/view_product.html
+++ b/ShoppingCart/src/main/resources/templates/view_product.html
@@ -39,7 +39,7 @@
 						</p>
 						<p class="fs-5 fw-bold">
 							Price :&nbsp; &nbsp; &nbsp; &nbsp;<i class="fas fa-rupee-sign"></i>
-							[[${product.discountedPrice}]] <span
+							[[${product.discountPrice}]] <span
 								class="fs-6 text-decoration-line-through text-secondary">[[${product.price}]]</span>
 							<span class="fs-6  text-success">[[${product.discount}]]% off</span>
 						</p>
