--- a/ShoppingCart/src/main/resources/templates/admin/edit_category.html
+++ b/ShoppingCart/src/main/resources/templates/admin/edit_category.html
@@ -13,13 +13,13 @@
 					<div class="card card-sh">
 						<div class="card-header text-center">
 							<p class="fs-4">Edit Category</p>
-							<th:block th:i="${session.successMsg}">
-								<p class="text-success fw-bold">[[${session.successMsg}]]</p>
+							<th:block th:i="${session.succMsg}">
+								<p class="text-success fw-bold">[[${session.succMsg}]]</p>
 							</th:block>
 							<th:block th:if="${session.errorMsg}">
 								<p class="text-danger fw-bold">[[${session.errorMsg}]]</p>
 							</th:block>
-							<th:block th:text="${@commonServiceImpl.removeSystemMessage()}"></th:block>
+							<th:block th:text="${@commonServiceImpl.removeSessionMessage()}"></th:block>
 						</div>
 
 						<div class="card-body">
