--- a/ShoppingCart/src/main/resources/templates/admin/index.html
+++ b/ShoppingCart/src/main/resources/templates/admin/index.html
@@ -11,7 +11,7 @@
 			<p class="text-center fs-3 mt-4 fw-bold text-primary">Admin Dashboard</p>
 			<div class="row p-5">
 				<div class="col-md-4 p-2">
-					<a href="/admin/add-product" class="text-decoration-none">
+					<a href="/admin/loadAddProduct" class="text-decoration-none">
 						<div class="card card-sh">
 							<div class="card-body text-center text-primary">
 								<i class="fa-solid fa-square-plus fa-3x"></i>
@@ -55,7 +55,7 @@
 				</div>
 
 				<div class="col-md-4 p-2">
-					<a href="#" class="text-decoration-none">
+					<a href="/admin/users" class="text-decoration-none">
 						<div class="card card-sh">
 							<div class="card-body text-center text-primary">
 								<i class="fa-solid fa-circle-user fa-3x"></i>
