--- a/ShoppingCart/src/main/resources/templates/login.html
+++ b/ShoppingCart/src/main/resources/templates/login.html
@@ -38,11 +38,11 @@
 												<button type="submit" class="btn bg-primary text-white col-md-12">Login</button>
 										</form>
 								</div>
-								<div class="card-footer text-center">
-										<a href="#" class="text-decoration-none">Forgot Password</a><br>
-										Don't have an account?
-										<a href="/register" class="text-decoration-none">Create Account</a>
-								</div>
+						<div class="card-footer text-center">
+							<a href="/forgot-password" class="text-decoration-none">Forgot Password</a><br>
+							Don't have an account ? <a href="/register" class="text-decoration-none">Create
+								one </a>
+						</div>
 						</div>
 				</div>
 		</div>
