Login page issue resolved. There was issue when user tries to login using email which does not exists

--- a/ShoppingCart/src/main/resources/templates/admin/add_product.html
+++ b/ShoppingCart/src/main/resources/templates/admin/add_product.html
@@ -54,6 +54,10 @@
 								<button class="btn btn-primary col-md-12">Add</button>
 							</form>
 						</div>
+						<div class="card-footer text-center">
+							<a href="/admin/" class="text-decoration-none">Back To Admin</a>
+						</div>
+						
 					</div>
 				</div>
 			</div>
