--- a/ShoppingCart/src/main/resources/templates/admin/category.html
+++ b/ShoppingCart/src/main/resources/templates/admin/category.html
@@ -53,6 +53,10 @@
 							</form>
 
 						</div>
+						<div class="card-footer text-center">
+							<a href="/admin/" class="text-decoration-none">Back To Admin</a>
+						</div>
+						
 					</div>
 				</div>
 				<div class="col-md-8">
