--- a/ShoppingCart/src/main/resources/templates/admin/edit_category.html
+++ b/ShoppingCart/src/main/resources/templates/admin/edit_category.html
@@ -62,6 +62,10 @@
 							</a>
 
 						</div>
+						<div class="card-footer text-center">
+							<a href="/admin/" class="text-decoration-none">Back To Admin</a>
+						</div>
+						
 					</div>
 				</div>
 			</div>
