--- a/ShoppingCart/src/main/resources/templates/admin/edit_product.html
+++ b/ShoppingCart/src/main/resources/templates/admin/edit_product.html
@@ -96,6 +96,10 @@
 								</div>
 								<button class="btn btn-primary col-md-12">Update</button>
 							</form>
+							<a href="/admin/products">
+								<button class="btn btn-primary col-md-12 mt-2">Back</button>
+							</a>
+							
 						</div>
 					</div>
 				</div>
