--- a/ShoppingCart/src/main/resources/templates/register.html
+++ b/ShoppingCart/src/main/resources/templates/register.html
@@ -30,7 +30,7 @@
 								<div class="row">
 									<div class="col">
 										<label class="form-label">Full Name</label> <input required
-											class="form-control" name="fullName" type="text">
+											class="form-control" name="name" type="text">
 									</div>
 									<div class="col">
 										<label class="form-label">Mobile Number</label> <input
@@ -62,7 +62,7 @@
 									</div>
 									<div class="col">
 										<label class="form-label">Pincode</label> <input required
-											class="form-control" name="pinCode" type="number">
+											class="form-control" name="pincode" type="number">
 									</div>
 								</div>
 
