--- a/ShoppingCart/src/main/resources/templates/view_product.html
+++ b/ShoppingCart/src/main/resources/templates/view_product.html
@@ -60,13 +60,16 @@
 						</div>
 
 						<th:block th:if="${product.stock>0}">
-						<a href="login.jsp" class="btn btn-danger col-md-12">Add To Cart</a>
+							<a href="#" class="btn btn-danger col-md-12">Add To Cart</a>
 						</th:block>
 						
 						<th:block th:unless="${product.stock>0}">
-						<a href="#" class="btn text-white btn-warning col-md-12">Out of Stock</a>
+							<a href="#" class="btn text-white btn-warning col-md-12">Out of Stock</a>
 						</th:block>
-						
+						<a href="/">
+							<button class="btn btn-primary col-md-12 mt-2">Back</button>
+						</a>
+
 					</div>
 				</div>
 			</div>
