--- a/ShoppingCart/src/main/resources/templates/admin/category.html
+++ b/ShoppingCart/src/main/resources/templates/admin/category.html
@@ -32,7 +32,7 @@
 								<div class="mb-3">
 									<label>Status</label>
 									<div class="form-check">
-										<input class="form-check-input" type="radio"
+										<input class="form-check-input" type="radio" checked = "true"
 											value="true" name="isActive" id="flexRadioDefault1">
 										<label class="form-check-label" for="flexRadioDefault1">
 											Active </label>
