Add product page issue resolved

--- a/ShoppingCart/src/main/resources/templates/admin/category.html
+++ b/ShoppingCart/src/main/resources/templates/admin/category.html
@@ -26,7 +26,7 @@
 							<form action="/admin/saveCategory" method="post"
 								enctype="multipart/form-data">
 								<div class="mb-3">
-									<label>Enter Category</label><input type="text" name="name"
+									<label>Enter Category</label><input required type="text" name="name"
 										class="form-control">
 								</div>
 								<div class="mb-3">
