--- a/ShoppingCart/src/main/resources/templates/admin/add_product.html
+++ b/ShoppingCart/src/main/resources/templates/admin/add_product.html
@@ -24,7 +24,7 @@
 						<div class="card-body">
 							<form action="/admin/saveProduct" method="post" enctype="multipart/form-data">
 								<div class="mb-3">
-									<label>Enter Title</label> <input type="text" name="title"
+									<label>Enter Title</label> <input required type="text" name="title"
 										class="form-control">
 								</div>
 								<div class="mb-3">
@@ -32,18 +32,18 @@
 									<textarea rows="3" cols="" class="form-control" name="description"></textarea>
 								</div>
 								<div class="mb-3">
-									<label>Select Category</label> <select class="form-control" name="category">
+									<label>Select Category</label> <select required class="form-control" name="category">
 										<option>--select--</option>
 										<option th:each="c:${categories}">[[${c.name}]]</option>
 									</select>
 								</div>
 								<div class="mb-3">
-									<label>Enter Price</label> <input type="number" name="price"
+									<label>Enter Price</label> <input required type="number" name="price"
 										class="form-control">
 								</div>
 								<div class="row">
 									<div class="mb-3 col">
-										<label>Enter Stock</label> <input type="text" name="stock"
+										<label>Enter Stock</label> <input required type="text" name="stock"
 											class="form-control">
 									</div>
 									<div class="mb-3 col">
