--- a/ShoppingCart/src/main/resources/templates/message.html
+++ b/ShoppingCart/src/main/resources/templates/message.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymleaf.org"
+	th:replace="base::Layout(~{::section})">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
+	<section>
 
+		<div class="container mt-5 p-5">
+			<div class="row">
+				<div class="col-md-6 p-5 text-center offset-md-3">
+					<h3>[[${msg}]]</h3>
+				</div>
+
+			</div>
+		</div>
+
+	</section>
 </body>
 </html>
